--- a/assets/css/3nights4daysoffer.css
+++ b/assets/css/3nights4daysoffer.css
@@ -49,7 +49,7 @@ margin-top:10px;
 .book{
     text-align: center;
     margin-top: 70px;
-	font-family: 'League Spartan';
+	font-family: 'League Spartan', sans-serif;
 	font-size: 35px;
 }
 .newyear{
@@ -101,10 +101,10 @@ margin-top:10px;
 	margin: 5.5% 5.5% 0;
 }
 .termsandconditions h2{
-	font-family: 'league Spartan';
+	font-family: 'league Spartan', sans-serif;
 }
 .termsandconditions ul li{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 }
 
 
@@ -118,11 +118,7 @@ margin-top:10px;
 
 footer{
 	background-color: #121a21;
-	padding:0px;
 	text-align:center;
-	justify-content:space-evenly;
-	left:0;
-	width:100%;
 }
 .footer-logo{
 	width: 180px;
@@ -135,11 +131,11 @@ footer{
 	padding: 0px 0px 30px 0px;
 }
 .address h3, .open-hours h3, .contact-for-more h3{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	color: #ffa51d;
 }
 .address p, .contact-for-more p, .open-hours p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: white;
 	width: 300px;
 }
@@ -187,7 +183,7 @@ footer{
 }
 .navbar-footer ul li{
 	list-style: none;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 }
 .navbar-footer a:hover{
 	color:#ff5757;
@@ -199,7 +195,7 @@ footer{
 }
 .other-navbar-footer ul li{
 	padding: 10px;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	list-style: none;
 }
 .other-navbar-footer ul li a{
@@ -211,7 +207,7 @@ footer{
 }
 .copyright{
 	text-align: center;
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: #eee;
 	padding: 20px;
 }
