--- a/assets/css/ticketprices.css
+++ b/assets/css/ticketprices.css
@@ -42,7 +42,7 @@ margin-top:10px;
 .ticket{
  text-align: center;
  margin-top: 6%;
- font-family: 'league spartan';
+ font-family: 'league spartan', sans-serif;
 font-size: 40px;
 }
 .back-video{
@@ -75,24 +75,24 @@ font-size: 40px;
 	width:500px;
 	text-align: center;
 	background-color:white;
-	border: none;
+	border: 1px solid white;
 	border-radius: 10px;
     padding-top: 40px;
 }
 .adult-ticket h3{
     margin-top: 20px;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	font-size: 25px;
 }
 .adult-ticket h2{
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
 	font-size: 20px;
 	color:#179eaf;
 	margin-top: 40px;
 }
 .adult-ticket p{
 	margin-top: 30px;
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	margin-top: 50px;
 }
 .price-colour{
@@ -109,7 +109,7 @@ font-size: 40px;
 	background-color: aqua;
 	border:10px;
 	border-radius: none;
-    font-family:'league spartan';
+    font-family:'league spartan', sans-serif;
 	font-size: 14px;
 
 }
@@ -119,14 +119,14 @@ font-size: 40px;
 	background-color: #eee;
 }
 .get-updates h1{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	text-align: center;
 	padding: 60px;
 	font-size: 50px;
     margin-bottom: auto;
 }
 .btn-book-now{
-	
+	text-align: center;
 }
 .email-address{
 	margin-left: 480px;
@@ -135,7 +135,7 @@ font-size: 40px;
 	border-radius: 80pc;
     background-color: #ffa51d;
 	border: #ffa51d;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	padding: 20px 30px 20px 30px;
 	color: white;
 }
@@ -150,7 +150,7 @@ font-size: 40px;
 .privacypolicy{
 	margin-left: 480px;
 	padding: 20px;
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 }
 
 
@@ -161,11 +161,7 @@ font-size: 40px;
 
 footer{
 	background-color: #121a21;
-	padding:0px;
 	text-align:center;
-	justify-content:space-evenly;
-	left:0;
-	width:100%;
 }
 .footer-logo{
 	width: 180px;
@@ -178,11 +174,11 @@ footer{
 	padding: 0px 0px 30px 0px;
 }
 .address h3, .open-hours h3, .contact-for-more h3{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	color: #ffa51d;
 }
 .address p, .contact-for-more p, .open-hours p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: white;
 	width: 300px;
 }
@@ -230,7 +226,7 @@ footer{
 }
 .navbar-footer ul li{
 	list-style: none;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 }
 .navbar-footer a:hover{
 	color:#ff5757;
@@ -242,7 +238,7 @@ footer{
 }
 .other-navbar-footer ul li{
 	padding: 10px;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	list-style: none;
 }
 .other-navbar-footer ul li a{
@@ -254,7 +250,7 @@ footer{
 }
 .copyright{
 	text-align: center;
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: #eee;
 	padding: 20px;
 }
