--- a/assets/store css/cart.css
+++ b/assets/store css/cart.css
@@ -48,7 +48,7 @@ margin-top:10px;
 }*/
 .cart{
     text-align: center;
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
 	padding: 40px;
 	font-size: 26px;
 }
@@ -61,7 +61,7 @@ margin-top:10px;
 }
 .product-table th{
     padding-right: 25px;
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
     height: 100px;
     width: 1000px;
     background-color: #eee;
@@ -72,7 +72,7 @@ margin-top:10px;
 }
 .product-table td{
     padding-left: 60px;
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
     border-bottom: 3px solid #eee;
 }
 .product-table td input{
@@ -135,5 +135,29 @@ margin-top:10px;
     flex-direction: column;
     align-content:center;
     flex-wrap: wrap;
-    padding-top: 50px;
+    padding:30px;
+}
+
+
+.background-footer{
+	background-color: #121a21;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.navbar-footer-logo{
+	padding: 25px 0px 0px 0px ;
+}
+.address{
+	font-family: 'open sans', sans-serif;
+	color: white;
+	padding: 20px 0px 0px 0px ;
+}
+.other-policies a{
+	font-family: 'open sans', sans-serif;
+	text-decoration: none;
+	color: white;
+}
+.other-policies a:hover{
+	color: #ff5757;
 }
