--- a/assets/css/booknow.css
+++ b/assets/css/booknow.css
@@ -15,7 +15,7 @@ body{
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 font-size:15px;
