--- a/assets/css/newyear.css
+++ b/assets/css/newyear.css
@@ -187,7 +187,7 @@ footer{
 }
 .navbar-footer ul li{
 	list-style: none;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 }
 .navbar-footer a:hover{
 	color:#ff5757;
