--- a/assets/css/privacypolicy.css
+++ b/assets/css/privacypolicy.css
@@ -13,11 +13,10 @@ body{
 }
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 font-size:15px;
@@ -47,24 +46,24 @@ position:sticky;
 	padding-top: 50px;
 }
 .privacy{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	text-align: center;
 	font-size: 26px;
 	color: black;
 }
 .notice h2{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	color: #ff4612;
 }
 .notice h3{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 }
 .notice p{
 	font-family: 'open sans', sans-serif;
 	
 }
 .notice ul li{
-	font-family: 'open sans';
+	font-family: 'open sans', sans-serif;
 }
 .notice{
 	padding: 74px;
@@ -72,4 +71,100 @@ position:sticky;
 	letter-spacing: -0.40px;
 	line-height: 32px;
 
+}
+
+
+footer{
+	background-color: #121a21;
+	text-align:center;
+}
+.footer-logo{
+	width: 180px;
+	margin: 50px 0px 30px 0px;
+}
+.address-open-hours-contact{
+	display: flex;
+	justify-content:space-evenly;
+	text-align: left;
+	padding: 0px 0px 30px 0px;
+}
+.address h3, .open-hours h3, .contact-for-more h3{
+	font-family: 'league spartan', sans-serif;
+	color: #ffa51d;
+}
+.address p, .contact-for-more p, .open-hours p{
+	font-family: 'poppins', sans-serif;
+	color: white;
+	width: 300px;
+}
+.social-medias a{
+	display: inline-block;
+	width: 40px; 
+    margin:0 10px 10px 0;
+	border-radius: 50px;
+	border: 1px solid white;
+	line-height: 40px;
+	color: #f6f6f6;
+	transition:0.5s;
+}
+.social-medias{
+	display: flex;
+	justify-content: center;
+	padding:10px 0px 0px 0px ;
+}
+
+.facebook a:hover{
+	background-color: #4267B2;
+}
+.twitter a:hover{
+	background-color:#1DA1F2;
+}
+.instagram a:hover{
+	background-image: linear-gradient(315deg, pink, purple);
+}
+.pinterest a:hover{
+	background-color: #E60023;
+}
+.youtube a:hover{
+	background-color: #FF0000;
+}
+/* footer-for-about-us-etc */
+.navbar-footer ul{
+	display: flex;
+	justify-content: center;
+}
+.navbar-footer ul li a{
+	padding: 10px;
+	color: white;
+	text-decoration:none;
+}
+.navbar-footer ul li{
+	list-style: none;
+	font-family: 'league spartan', sans-serif;
+}
+.navbar-footer a:hover{
+	color:#ff5757;
+}
+/* footer-for-privacy-etc */
+.other-navbar-footer ul{
+    display: flex;
+	justify-content: center;
+}
+.other-navbar-footer ul li{
+	padding: 10px;
+	font-family: 'league spartan', sans-serif;
+	list-style: none;
+}
+.other-navbar-footer ul li a{
+	text-decoration: none;
+	color: white;
+}
+.other-navbar-footer a:hover{
+	color: #ff5757;
+}
+.copyright{
+	text-align: center;
+	font-family: 'poppins', sans-serif;
+	color: #eee;
+	padding: 20px;
 }
