--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ padding:10px;
 }
 .step h3{
 margin-top:230px;
-font-family:'Jost';
+font-family:'poppins',sans-serif;
 font-size:1.90em;
 font-weight:600;
 color:#ff5757;
