--- a/assets/signup for booking/forgot-password-new-password.css
+++ b/assets/signup for booking/forgot-password-new-password.css
@@ -37,3 +37,23 @@
     cursor: pointer;
     border-radius: 4px;
 }
+
+
+
+
+
+
+@media screen and (max-width:450px) {
+
+    .image {
+        display: none;
+    }
+
+    .new-password{
+        position: relative;
+        top: 135px;
+        width: 100%;
+        padding: 30px;
+    }
+    
+}
