--- a/assets/signup for booking/forgot-password-verification.css
+++ b/assets/signup for booking/forgot-password-verification.css
@@ -46,3 +46,21 @@ span{
     cursor: pointer;
     border-radius: 4px;
 }
+
+
+
+
+@media screen and (max-width:450px) {
+
+    .image {
+        display: none;
+    }
+
+    .verification{
+        position: relative;
+        top: 160px;
+        width: 100%;
+        padding: 30px;
+    }
+    
+}
