--- a/assets/signup for booking/forgot-password.css
+++ b/assets/signup for booking/forgot-password.css
@@ -46,3 +46,23 @@
     color: #1c314d;
     text-decoration: none;
 }
+
+
+
+@media screen and (max-width:450px) {
+
+    .image {
+        display: none;
+    }
+    .image-forgot-password{
+        position: relative;
+        top: 0px;
+    }
+    .forgot-password{
+        width: 100%;
+        padding: 30px;
+        position: relative;
+        top: 185px;
+    }
+    
+}
