--- a/assets/signup for booking/create-an-account.css
+++ b/assets/signup for booking/create-an-account.css
@@ -63,3 +63,18 @@ label, h5{
 p{
     font-family: 'poppins', sans-serif;
 }
+
+
+
+@media screen and (max-width:450px) {
+
+    .image{
+        display: none;
+    }
+
+    .sign-up{
+        width: 100%;
+        padding: 30px;
+    }
+    
+}
