--- a/assets/signup for booking/signup.css
+++ b/assets/signup for booking/signup.css
@@ -56,10 +56,15 @@
     .image{
         display: none;
     }
-
+    .image-signup{
+        position: relative;
+        top: 0px;
+    }
     .sign-up{
         width: 100%;
         padding: 30px;
+        position: relative;
+        top: 150px;
     }
     
 }
